force-app/main/default/objects/tc9_pr__Utility_Extension_Settings__c/tc9_pr__Utility_Extension_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom settings used by the 2cloudnine Utility Extension unmanaged package.</description>
    <label>Utility Extension Settings</label>
</CustomObject>