force-app/main/default/objects/tc9_pr__Utility_Extension_Settings__c/fields/tc9_pr__Super_SMSF_File_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Super_SMSF_File_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enforces a SMSF file upload for the Community Capture Superannuation screen flow deployed with the 2cloudnine Utility Extension.</description>
    <inlineHelpText>Enforces a SMSF file upload for the Community Capture Superannuation screen flow deployed with the 2cloudnine Utility Extension.</inlineHelpText>
    <label>Super SMSF File Mandatory</label>
    <type>Checkbox</type>
</CustomField>