force-app/main/default/objects/tc9_pr__Utility_Extension_Settings__c/fields/tc9_pr__TFN_Remove_Personal_Details__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__TFN_Remove_Personal_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Removes the personal details section on the Community Capture TFN screen flow deployed with the 2cloudnine Utility Extension.</description>
    <inlineHelpText>Removes the personal details section on the Community Capture TFN screen flow deployed with the 2cloudnine Utility Extension.</inlineHelpText>
    <label>TFN Remove Personal Details</label>
    <type>Checkbox</type>
</CustomField>